--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "json-server": "^0.16.3",
     "node-fetch": "^2.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "build": "react-scripts build",  
     "server": "json-server --watch db.json -p 6001",
     "test": "jest --bail"
   },
@@ -37,13 +38,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.4",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "json-server": "^1.0.0-beta.3"
   },
   "jest": {
     "setupFiles": [
       "<rootDir>/jest.setup.js"
     ],
     "testEnvironment": "jsdom",
-    "testPathIgnorePatterns": ["/test_suites"]
+    "testPathIgnorePatterns": [
+      "/test_suites"
+    ]
   }
 }
